# DI_Fontys_AR_Multirobot

src/Cooperative-Robotics/: README.md
src/Rosbee/: .gitignore  README.md
src/Rosbee/rosbee_bringup/: CMakeLists.txt  package.xml
src/Rosbee/rosbee_bringup/launch/: joystick.launch  kinect_laser.launch  minimal.launch  rosbee_with_kinect.launch  rosbee_with_xtion.launch  xtion_laser.launch
src/Rosbee/rosbee_description/: CMakeLists.txt  package.xml  rosbee_display.rviz
src/Rosbee/rosbee_description/launch/: test.launch
src/Rosbee/rosbee_description/meshes/: 1443_metal_gearmotor.stl  500093_RVS_motorsteun_Rosbee_mm.stl  500093_rvs_motormount_.stl  kinect.stl
src/Rosbee/rosbee_description/robots/: rosbee.urdf.xacro
src/Rosbee/rosbee_navigation/: CMakeLists.txt  package.xml
src/Rosbee/rosbee_navigation/config/gmapping/: gmapping.yaml
src/Rosbee/rosbee_navigation/config/move_base/: costmap_common.yaml  move_base.yaml
src/Rosbee/rosbee_navigation/launch/: gmapping.launch  move_base.launch  move_base_gmapping_demo.launch
src/Rosbee/rosbee_node/: CMakeLists.txt~  manifest.xml.OLD  manifest.xml~  package.xml  package.xml~
src/Rosbee/rosbee_node/launch/: robot_node.launch
src/Rosbee/rosbee_node/msg/: BatteryStatus.msg  BatteryStatus.msg~  NetworkStatus.msg  NetworkStatus.msg~  SysInfo.msg  SysInfo.msg~  SystemStatus.msg~
src/Rosbee/rosbee_node/param/: mux.yaml
src/Rosbee/rosbee_node/src/: Http_node.py  Http_rosinterface.py  bits.py  comportconfig_support.py  listports.py  rbha.py  robot_node.py  robot_nodetest.py  rosinterface.py  serialconfig.txt  sysinfo.py  test.py  test2.py  test3.py
src/Rosbee/rosbee_ros/: CMakeLists.txt  package.xml
src/multibot/: README.md
src/multibot/adhoc_communication/: CMakeLists.txt
src/multibot/adhoc_communication/launch/: adhoc.launch  adhoc_communication.launch  adhoc_communication.launch~  test_connection_for_three.launch
src/multibot/adhoc_communication/src/: AckLinkFrame.cpp  AckLinkFrame.h  AckRoutedFrame.cpp  AckRoutedFrame.h  Beacon.cpp  Beacon.h  DebugFunctions.h  EthernetFrame.cpp  EthernetFrame.h  Logging.cpp  Logging.h  McAckFrame.cpp  McAckFrame.h  McDisconnectFrame.cpp  McDisconnectFrame.h  McHandler.cpp  McHandler.h  McNackFrame.cpp  McNackFrame.h  McPosAckObj.cpp  McPosAckObj.h  McRouteActivationFrame.cpp  McRouteActivationFrame.h  McTree.cpp  McTree.h  MultiHopBroadcastFrame.cpp  MultiHopBroadcastFrame.h  Packet.cpp  Packet.h  PositionSubscriber.cpp  (+12 more)
src/multibot/explorer/: CMakeLists.txt
src/multibot/map_merger/: CMakeLists.txt
src/multibot/scripts/: ros_multi_robot_ready.sh
src/my_pkg/: CMakeLists.txt  package.xml
src/my_pkg/src/: PinPub.py  TranslationNode.py  loic_node.py  second_node.py  theNODE.py
src/teleop_twist_keyboard/: teleop_twist_keyboard.py
src/testbot_gazebo/: CMakeLists.txt  package.xml
src/testbot_gazebo/launch/: gmapping.launch  testbot.launch  turtlebot.launch  view_navigation.launch
(+100 files in other folders)
