<?xml version="1.0"?>
<package>
  <name>rosbee_node</name>
  <version>1.3.0</version>
  <description>The rosbee_node package</description>

  <maintainer email="kris@todo.todo">kris</maintainer>
  <maintainer email="r.halvaei@gmail.com">Roozbeh</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/rosbee_node</url> -->

  <author email="eric@todo.todo">Eric</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rosbee_note</run_depend>
  <export>
  </export>
</package>
