<?xml version="1.0"?>
<package>
  <name>rosbee</name>
  <version>0.0.1</version>
  <description>The rosbee metapackage</description>
  <maintainer email="kris@todo.todo">kris</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rosbee_bringup</run_depend>
  <run_depend>rosbee_description</run_depend>
  <run_depend>rosbee_node</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
